--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,14 +1,26 @@
-<h1>Welcome to my Awesome Web App</h1>
 
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Project</th>
+      <th scope="col">Description</th>
+      <th scope="col">Plan</th>
+      <th scope="col">Plan Hours</th>
+      <th scope="col">Hours Worked</th>
+    </tr>
+  </thead>
+  <tbody>
+  	<% @projects.each do |project| %>
+		  <div><tr>
+		    <td><p><%= project.name %></p></td>
+		    <td><i><%= project.description %></i></td>
+		    <td><p><%= project.plan %></p></td>
+		    <td><p><%= project.planhours %></p></td>
+		    <td><p><%= project.thours %></p></td>
+		  </tr></div>
 
-<% @projects.each do |project| %>
-  <div>
-    <h1><%= project.name %></h1><br />
-    <i><%= project.description %></i><br />
-    <p><%= project.plan %></p><br />
-    <p><%= project.planhours %></p><br />
-    <p><%= project.thours %></p><br />
-  </div>
+		  <hr />
+	<% end %>
+  </tbody>
+</table>
 
-  <hr />
-<% end %>
