--- a/app/views/hourlogs/index.html.erb
+++ b/app/views/hourlogs/index.html.erb
@@ -1,7 +1,6 @@
-<h1>Hours Log</h1>
+<div class= "container"> 
+<h1 class= "">Hours Log</h1>
 
-
-<h1><%= @title %></h1>
 
 <div class = "row">
 	<div class="col"> 
@@ -21,7 +20,7 @@
 		      <th scope="col">Hours</th>
 		    </tr>
 		  </thead>
-		  <tbody>
+		  <tbody class = "booyah-box">
 		  	<% @hourlogs.each do |h| %>
 				  <div><tr>
 				    <td><p><%= h.name %></p></td>
@@ -33,5 +32,6 @@
 		  </tbody>
 		</table>
 	</div>
+</div>
 </div>
 
