--- a/app/views/hourlogs/new.html.erb
+++ b/app/views/hourlogs/new.html.erb
@@ -1,10 +1,12 @@
+<div class= "container p-3"> 
 <div class="booyah-box col-10 offset-1">
   <h1>Log your hours</h1>
   <%= simple_form_for @hourlog do |f| %>
     <%= f.input :name %>
     <%= f.input :project %>
     <%= f.input :description %>
-    <%= f.input :hours %>
+    <%= f.input :hours %> <br />
     <%= f.submit 'Create' %>
   <% end %>
+</div>
 </div>
