--- a/app/views/hourlogs/index.html.erb
+++ b/app/views/hourlogs/index.html.erb
@@ -1,11 +1,9 @@
 <div class= "container"> 
 
-<h2 class= "p-3">Log your hours :) </h2>
-
-
 <div class = "row">
-	<div class="col"> 
-		<button> <%= link_to "Log Hours", new_hourlog_path , class: 'nav-link' %> </button>
+	<h2 class= "p-3 col-10">Hour Log </h2>
+	<div class="p-3 col-2"> 
+		<%= link_to "Log Hours", new_hourlog_path , class: 'btn btn-info' %>
 	</div>
 </div>
 
@@ -15,21 +13,25 @@
 		<table class="table table-hover">
 		  <thead>
 		    <tr>
+		      <th scope="col"> Date </th>
 		      <th scope="col">Name <i class="fa fa-plus-circle"></i></th>
-		      <th scope="col">Project</th>
+		      <th scope="col">Project <i class="fas fa-air-freshener"></i></th>
 		      <th scope="col">Description</th>
 		      <th scope="col">Hours</th>
-		      <th scope="col">User</th>
+		      <th scope="col">Posted by</th>
+		      <th scope="col">Actions</th>
 		    </tr>
 		  </thead>
 		  <tbody class = "booyah-box">
 		  	<% @hourlogs.each do |h| %>
 				  <div><tr>
+				  	<td><p> <%= h.date.to_formatted_s(:short) %> </p></td>
 				    <td><p><%= h.name %></p></td>
 				    <td><p><%= h.project %></p></td>
 				    <td><p><%= h.description %></p></td>
 				    <td><p><%= h.hours %></p></td>
 				    <td><p> <% if h.user.present? %> <small><%= h.user.email %></small> <%end%></p></td>
+				    <td><p><%= link_to 'Edit', edit_hourlog_path(h), class: 'btn btn-info'%> <%= link_to 'Destroy', hourlog_path(h), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %></td>
 				  </tr></div>
 			<% end %>
 		  </tbody>
