--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,9 +1,9 @@
 <div class="booyah-box col-10 offset-1">
-  <h1>Enter Your Place Details</h1>
+  <h1>Add Project Details</h1>
   <%= simple_form_for @project do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.input :plan %>
+    <%= f.input :plan, collection: ["Beta", "MVP", "Startup"]%>
     <%= f.input :planhours %>
     <%= f.input :thours %>
 </br> 
