--- a/app/views/hourlogs/index.html.erb
+++ b/app/views/hourlogs/index.html.erb
@@ -22,16 +22,16 @@
 		      <th scope="col">Actions</th>
 		    </tr>
 		  </thead>
-		  <tbody class = "booyah-box">
+		  <tbody class = "">
 		  	<% @hourlogs.each do |h| %>
 				  <div><tr>
-				  	<td><p> <%= h.date.to_formatted_s(:short) %> </p></td>
+				  	<td><p> <%= h.date.strftime("%B %C, %Y") %> </p></td>
 				    <td><p><%= h.name %></p></td>
-				    <td><p><%= h.project %></p></td>
+				    <td><p><%= h.project_id %></p></td>
 				    <td><p><%= h.description %></p></td>
 				    <td><p><%= h.hours %></p></td>
 				    <td><p> <% if h.user.present? %> <small><%= h.user.email %></small> <%end%></p></td>
-				    <td><p><%= link_to 'Edit', edit_hourlog_path(h), class: 'btn btn-info'%> <%= link_to 'Destroy', hourlog_path(h), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %></td>
+				    <td><p><%= link_to 'Edit', edit_hourlog_path(h), class: 'btn btn-info'%> <%= link_to 'Delete', hourlog_path(h), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %></td>
 				  </tr></div>
 			<% end %>
 		  </tbody>
