--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,5 @@
 <div class="booyah-box col-10 offset-1">
-<div class = "container">
-  <h1>Add Project Details</h1>
+  <h1>Edit details</h1>
   <%= simple_form_for @project do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
@@ -17,17 +16,20 @@
 		    <%= f.input :duration %>
 		</div>
 	    <div class = "col-4">
-    		<%= f.input :starthourtrack, as: :date, html5: true %>
+    		<%= f.input :starthourtrack, as: :date, start_year: Date.today.year - 1,
+                              end_year: Date.today.year + 1, discard_day: false,
+                              order: [:day, :month, :year] %>
         </div>                      
     </div>
-    <%= f.input :status, 
+        <%= f.input :status, 
           :collection => [[true, 'Active'], [false, 'Inactive']], 
           :label_method => :last, 
           :value_method => :first,
           :as => :radio_buttons, 
           :checked => true %>
+
+
 </br> 
-    <%= f.submit 'Add', class: 'btn btn-primary' %>
+    <%= f.submit 'Update', class: 'btn btn-primary' %>
   <% end %>
-</div>
 </div>
