--- a/app/views/hourlogs/index.html.erb
+++ b/app/views/hourlogs/index.html.erb
@@ -6,8 +6,16 @@
 		<%= link_to "Log Hours", new_hourlog_path , class: 'btn btn-primary' %>
 	</div>
 </div>
-
-
+<div class="row"> 
+	<div class="col-9"> 
+		<div class="page_info">
+	      <%= page_entries_info @hourlogs %>
+	    </div>
+	</div>
+	<div class="col-3"> 
+		<%= will_paginate @hourlogs, :container => false %>
+	</div>
+</div>
 <div class = "row">
 	<div class="col"> 
 		<table class="table table-hover">
@@ -26,13 +34,14 @@
 		  	<% @hourlogs.each do |h| %>
 				  <div><tr>
 				  	<td><p> <%= h.date.strftime('%B %d, %Y') %> </p></td>
-				    <td><p><%= h.name %> <%= h.id %></p></td>
+				    <td><p><%= h.name %></p></td>
 				    <td><p><%= @project.where(id: h.project_id).pluck(:name) %></p></td>
 				    <td><p><%= h.description %></p></td>
 				    <td><p><%= h.hours %></p></td>
 				    <td><p> <% if h.user.present? %> <small><%= h.user.email %></small> <%end%></p></td>
 				    <td><p><%= link_to 'Edit', edit_hourlog_path(h), class: 'btn btn-info'%> <%= link_to 'Delete', hourlog_path(h), method: :delete, data: {confirm: 'Are you sure you want to delete this?'},class: 'btn btn-danger' %></td>
 				  </tr></div>
+
 			<% end %>
 		  </tbody>
 		</table>
