--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
 
-  	<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  	<nav class="navbar navbar-toggleable-md navbar-inverse ">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -19,19 +19,19 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
           <li class ="nav-item">
-              <%= link_to 'Hour Log', hourlogs_path, class: 'nav-link' %> 
+              <%= link_to 'Projects', projects_path, class: 'nav-link' %> 
           </li>
           <li class ="nav-item">
-              <%= link_to 'Projects', projects_path, class: 'nav-link' %> 
-            </li>
-          <li class ="nav-item">
+              <%= link_to 'Hour Log', hourlogs_path, class: 'nav-link' %> 
+          </li>
+          <!-- <li class ="nav-item">
               <%= link_to 'Team', '#', class: 'nav-link' %> 
-            </li>
+            </li> --> 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!--<form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
 
         <ul class = "navbar-nav"> 
         	<% if user_signed_in? %> 
