Second iteration: filter is complete, controller variables refined, will_paginate, team page created, added columns to users

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,10 @@
  *= require_tree .
  *= require_self
  */
-
+ @import "font-awesome";
+ @import "font-awesome-sprockets";
  @import "bootstrap";
  @import 'datetime_picker_input'; 
- @import "font-awesome";
+
 
  
