--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,35 +1,32 @@
 <div class="booyah-box col-10 offset-1">
-  <h1>Edit details</h1>
-  <%= simple_form_for @project do |f| %>
-    <%= f.input :name %>
-    <%= f.input :description %>
-    <%= f.input :plan, collection: ["Beta", "MVP", "Startup"]%>
-    <%= f.input :planhours %>
-    <%= f.input :thours %>
-	<div class="row"> 
-		<div class = "col-4">
-			<%= f.input :plandate, as: :date, start_year: Date.today.year - 1,
-		                              end_year: Date.today.year + 1, discard_day: false,
-		                              order: [:day, :month, :year] %>
-		</div>
-		<div class = "col-4">
-		    <%= f.input :duration %>
-		</div>
-	    <div class = "col-4">
-    		<%= f.input :starthourtrack, as: :date, start_year: Date.today.year - 1,
-                              end_year: Date.today.year + 1, discard_day: false,
-                              order: [:day, :month, :year] %>
-        </div>                      
-    </div>
-        <%= f.input :status, 
-          :collection => [[true, 'Active'], [false, 'Inactive']], 
-          :label_method => :last, 
-          :value_method => :first,
-          :as => :radio_buttons, 
-          :checked => true %>
+  <div class = "container">
+      <h1>Edit details</h1>
+      <%= simple_form_for @project do |f| %>
+        <%= f.input :name %>
+        <%= f.input :description %>
+        <%= f.input :plan, collection: ["Design", "MVP", "Beta", "Startup", "Full Time", "Enterprise", "Custom"]%>
+        <%= f.input :planhours %>
+    	<div class="row"> 
+    		<div class = "col-4">
+    			<%= f.input :plandate, as: :date, html5: true %>
+    		</div>
+    		<div class = "col-4">
+    		    <%= f.input :duration %>
+    		</div>
+    	    <div class = "col-4">
+        		<%= f.input :starthourtrack, :label => "Start new dev cycle on", as: :date, html5: true %>
+            </div>                      
+        </div>
+            <%= f.input :status, :label => "Project Status",
+              :collection => [[true, 'Active'], [false, 'Inactive']], 
+              :label_method => :last, 
+              :value_method => :first,
+              :as => :radio_buttons, 
+              :checked => true %>
 
 
-</br> 
-    <%= f.submit 'Update', class: 'btn btn-primary' %>
-  <% end %>
+    </br> 
+        <%= f.submit 'Update', class: 'btn btn-primary' %>
+      <% end %>
+  </div>
 </div>
