--- a/app/views/hourlogs/new.html.erb
+++ b/app/views/hourlogs/new.html.erb
@@ -3,13 +3,25 @@
   <h1>Log your hours</h1>
   <%= simple_form_for @hourlog do |f| %>
     <%= f.input :name %>
-    <%= f.label :project_id, 'Project' %> <br/>
-    <%= f.collection_select :project_id, @projects, :id, :name %>  
-    <%= f.input :description %>
-    <%= f.input :hours %>
+    <div class="row">
+        <div class ="col-6">
+          <%= f.label :project_id, 'Project' %> <br/>
+          <%= f.collection_select :project_id, @projects, :id, :name %>
+        </div>
+        <div class ="col-6">
+          <%= f.input :description, label: "I worked on" %>
+        </div>
+    </div>
+    <div class="row">
+      <div class ="col-6">
+        <%= f.input :hours %>
+      </div>
+      <div class ="col-6">
+        <%= f.input :date, as: :date, html5: true %>
+      </div>
+    </div>
 	<br />
-	<%= f.input :date, as: :date, html5: true %>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Create', class: 'btn btn-primary' %>
   <% end %>
 </div>
 </div>
