--- a/app/views/filters/edit.html.erb
+++ b/app/views/filters/edit.html.erb
@@ -4,26 +4,29 @@
 <%= simple_form_for @filter do |f| %>
     <div class = "row"> 
     	<div class = "col-3 align-bottom">
+    		<%= f.input :email, :collection => @user, label_method: :concatenated_name, value_method: :email, label: "Posted by", include_blank: true %>
+    	</div>
+    	<div class = "col-3 align-bottom">
     		<%= f.input :project, :collection => @project, label_method: :name, value_method: :id, label: "Choose Project", include_blank: true %>
     	</div>
-    	<div class = "col-3 align-bottom">
+    	<div class = "col-2 align-bottom">
     		<%= f.input :date_from, as: :date, html5: true %>
     	</div>
-    	<div class = "col-3 align-bottom">
+    	<div class = "col-2 align-bottom">
     		<%= f.input :date_to, as: :date, html5: true %>  
     	</div>
     	<div class = "col-1 mx-auto my-4">
     		<%= f.submit 'Filter', class: 'btn btn-primary align-bottom' %>
     	</div>
- <% end %>
-<div class = "col-2 align-bottom my-4">
- <%= simple_form_for @filter do |f| %>
-    		<%=f.hidden_field :project, :value => nil %>
-    		<%=f.hidden_field :date_from, :value => nil %>
-    		<%=f.hidden_field :date_to, :value => nil %>
-    		<%= f.submit 'Clear filter', class: 'text-danger' %>		
- <% end %>
-</div>
+  <% end %>
+		<div class = "col-1 align-bottom my-4">
+		 <%= simple_form_for @filter do |f| %>
+		    		<%=f.hidden_field :project, :value => nil %>
+		    		<%=f.hidden_field :date_from, :value => nil %>
+		    		<%=f.hidden_field :date_to, :value => nil %>
+		    		<%= f.submit 'Clear filter', class: 'text-danger' %>		
+		 <% end %>
+		</div>
 </div>
 <div class="row"> 
 	<div class="col-9"> 
@@ -54,7 +57,7 @@
 				  <div class = ""><tr>
 
 						  	<td><p> <%= h.date.strftime('%B %d, %Y') %> </p></td>
-						    <td><p><%= h.name %></p></td>
+						    <td><p><% if h.user.present? %><%= h.user.fname %> <%= h.user.lname %> <%end%></p></td>
 						    <td><p><%= h.project.name %></p></td>
 						    <td><p><%= h.description %></p></td>
 						    <td><p><%= h.hours %></p></td>
